--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\pvtha\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\pvtha\\AppData\\Roaming\\NetBeans\\12.0\\tomcat80.properties
 j2ee.server.domain=D:/apache-tomcat-8.5.65
-j2ee.server.home=D:/apache-tomcat-8.5.65
-j2ee.server.instance=tomcat80:home=D:\\apache-tomcat-8.5.65
+j2ee.server.home=D:/Tomcat
+j2ee.server.instance=tomcat80:home=D:\\Tomcat
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\pvtha\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\pvtha\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
