--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-9.2.1.jre8.jar}:\
     ${file.reference.jst-1-2l.jar}:\
-    ${file.reference.commons-io-2.8.0.jar}
+    ${file.reference.commons-io-2.8.0.jar}:\
+    ${libs.javaee-web-api-8.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
